--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -10,14 +10,14 @@ $secondary-color: #7d6b57; //Warrior
 
 //Font Colours
 $text-color: #020202; //Black Wash
-$secondary-text-color: #e1e3cf; //Wild Wheat
+$secondary-text-color: #e8ebe5; //Wild Wheat
 $grey-text-color: #6b6b6b; //Shadows
 $text-color-alt: #0d0d12; //Ruined Smores
-
+$footer-text-color: #020202;
 //Background Colours
 $background-color: #D7CEC7; 
 $ash: #B7B9A8; //Ash
-
+$footer-bg-color: #919D82;
 //Background Colour Complementary Shades
 
 //About-Me Cards Background Colours
