--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -200,6 +200,8 @@
 
         /*Icon Bouncing Animation*/
         animation: bounce 3s infinite;
+        filter: drop-shadow(1px 5px 5px rgba(0,0,0,0.6));
+            
             @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
             transform: translateY(0);
