--- a/scss/pages/_scs.scss
+++ b/scss/pages/_scs.scss
@@ -15,17 +15,17 @@
 }
 
 .scs__container {
+    position: relative;
     min-height: 100vh;
     width: calc(100% - 40px);
     display: flex;
     flex-direction: column;
     flex: 1;
-    margin: 60px 20px 0 20px; // Increased top margin for burger menu
+    margin: 60px 20px 0 20px;
     scroll-snap-align: start;
     font-family: $base-font-family;
     background-color: $background-color;
     color: $text-color;
-    border-left: 3px solid $primary-color;
     padding-bottom: 20px;
     
     @include respond-to(md) {
@@ -33,24 +33,24 @@
         margin-left: 200px;
         border-left: none;
         margin-top: 20px;
-    }
-}
-
-.scs__section {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 40px;
-
-    @include respond-to(md) {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
     }
 }
 
+
+
 .scs__content {
-    max-width: 100%;
+    max-width: 90%;
     padding: 20px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: $background-color-comp-light;
+    border-radius: 8px;
+    
 
     @include respond-to(md) {
         max-width: 60%;
@@ -78,7 +78,7 @@
         letter-spacing: 0.3px;
         line-height: 1.6;
         margin-bottom: 20px;
-
+        
         @include respond-to(md) {
             font-size: 1.1rem;
         }
@@ -120,6 +120,8 @@
         width: 100%;
         height: auto;
         object-fit: cover;
+        clip-path: circle(50% at 50% 50%);
+        shape-outside: circle(50% at 50% 50%) ;
     }
 }
     .scs__intro {
