--- a/scss/components/_burger.scss
+++ b/scss/components/_burger.scss
@@ -11,6 +11,7 @@
     top: 20px;
     left: 20px;
     z-index: 1000;
+  
 
     //Burger Menu Button Styling
     .burger__btn {
@@ -47,14 +48,10 @@
         background-color: darken($primary-color, 20%);
         box-shadow: 0 2px 2px $primary-color-dark;
       }
-
+    }
       //Burger Menu Animation 
-      &.animated {
-        .burger__btn--line {
-          background-color: $primary-color-dark;
-          z-index: 999999;
-        }
-    
+      .animated {
+
         .top {
           transform: translateY(15px) rotate(45deg);
         }
@@ -67,25 +64,41 @@
           width: 0;
         }
       }
+    
+
+
+   
+  .burger__hidden {
+    display: block;
+    position: fixed;
+    top: -100;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $secondary-text-color;
+    
+  } 
+    .showNav {
+      top: 0;
     }
 
-   .burger__hidden {
-     
-     bottom: -100%; 
-     transition: bottom 0.3s ease; 
+    .hideNav {
+      top: -100%;
+    }
+
+    .hidden {
+      display: none;
+    }
    
-     &.slide-in {
-       bottom: 0; 
-   }
-  } 
+  
     //Burger Menu Links 
     .burger__links {
       list-style: none;
       padding: 0;
       position: relative;
       top: 10%;
-
-        &--item {
+      
+        .item {
           margin: 60px auto;
           text-align: center;
         }
@@ -99,45 +112,7 @@
           text-decoration: none;
           padding: 10px;
 
-          .hero__text--h1 {
-              top: 40%;
-              font-size: clamp(2rem, 5vw, 3rem);
-              letter-spacing: 0.05em;
-              text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
-                       2px 2px 0 rgba(0, 0, 0, 0.2); 
-                       filter: blur(0.1px); 
-              
-              @include respond-to(sm) {
-                  top: 35%;
-                  font-size: clamp(1.5rem, 4vw, 2.5rem);
-              }
-
-              @include respond-to(xs) {
-                  top: 30%;
-                  font-size: clamp(1rem, 3vw, 2rem);
-              }
-            }
-
-          .hero__text--h2,
-          .typewriter {
-              top: 55%;
-              font-size: clamp(3rem, 7vw, 4rem);
-              letter-spacing: 0.03em;
-              text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 
-                            2px 2px 2px rgba(0, 0, 0, 0.4); 
-                            filter: blur(0.1px); 
-              @include respond-to(sm) {
-                  top: 60%;
-                  font-size: clamp(2.5rem, 6vw, 3.5rem);
-              }
-
-              @include respond-to(xs) {
-                  top: 65%;
-                  font-size: clamp(2rem, 5vw, 3rem);
-              }
-           }
-          
-
+    
               // Links Hover Effect 
         
               // CSS variables for JS control.
@@ -255,7 +230,7 @@
       justify-content: center;
       gap: 20px;
       
-      &--item {
+      .item {
         margin: 100px 0;
         text-align: center;
       }
@@ -275,27 +250,12 @@
       }
     }
     
-
-  
-    .showNav {
-      top: 0; 
-    }
-  
-    .hideNav {
-      top: -100%; 
-    }
-  
-    .hidden {
-      display: none;
-    }
-
+  }  
   
 
- 
-    
     /*Hide at 768px*/
     @include respond-to(md) {
         display: none;
     }
   
-  }
+  
