--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -11,7 +11,9 @@ body {
     max-width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    overflow: hidden;
     
     @include respond-to(md) {
         padding-left: 200px; 
@@ -28,9 +30,8 @@ body {
     overflow: hidden;
 
     &--img img {
-        width: 100%;
-        height: auto;
-        display: block;
+        min-width: 100%;
+        height: 100vh;
         object-fit: cover;
         filter: brightness(0.5);
     }
@@ -94,7 +95,7 @@ body {
     }
 }
 
-.about__main {
+.about__text {
     width: 90%;
     max-width: 800px;
     margin: -50px auto 50px;
@@ -119,7 +120,7 @@ body {
 
     p {
         font-family: $base-font-family;
-        font-size: clamp(1rem, 2vw, 1.2rem);
+        font-size: clamp(1.5rem, 3vw, 1.7rem);
         line-height: 1.6;
         text-align: justify;
         margin-bottom: 15px;
@@ -127,20 +128,6 @@ body {
         margin-left: auto;
         margin-right: auto;
 
-        @include respond-to(md) {
-            font-size: 1.2rem;
-            line-height: 1.8;
-        }
-
-        a {
-            text-decoration: none;
-            color: $primary-color;
-            transition: color 0.3s ease;
-
-            &:hover, &:focus {
-                color: darken($primary-color, 10%);
-            }
-        }
     }
 }
 
@@ -163,7 +150,7 @@ body {
 .contact-button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: $primary-color;
+    background-color: darken($primary-color, 10%);
     color: $secondary-text-color;
     text-decoration: none;
     font-family: $hero-font;
@@ -175,15 +162,6 @@ body {
     &:hover, &:focus {
         background-color: darken($primary-color, 10%);
         transform: translateY(-2px);
-    }
-
-    &:active {
-        transform: translateY(0);
-    }
-
-    @include respond-to(md) {
-        font-size: 1.2rem;
-        padding: 12px 24px;
     }
 }
 
