--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -15,7 +15,7 @@ $grey-text-color: #6b6b6b; //Shadows
 $text-color-alt: #0d0d12; //Ruined Smores
 $footer-text-color: #020202;
 //Background Colours
-$background-color: #D7CEC7; 
+$background-color: #D1CDC3; 
 $ash: #B7B9A8; //Ash
 $footer-bg-color: #919D82;
 //Background Colour Complementary Shades
