--- a/scss/pages/_scs.scss
+++ b/scss/pages/_scs.scss
@@ -2,17 +2,7 @@
 // SCS Scheme //
 // ---------- // 
 
-.menu__burger {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 1000;
-    display: block;
 
-    @include respond-to(md) {
-        display: none;
-    }
-}
 
 .scs__container {
     position: relative;
@@ -21,7 +11,9 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    margin: 60px 20px 0 20px;
+    margin-top: 60px;
+    margin-left: 40px;
+    margin-right: 40px;
     scroll-snap-align: start;
     font-family: $base-font-family;
     background-color: $background-color;
@@ -48,7 +40,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $background-color-comp-light;
+    background-color: darken($background-color, 10%);
     border-radius: 8px;
     
 
