--- a/scss/components/_burger.scss
+++ b/scss/components/_burger.scss
@@ -250,12 +250,9 @@
       }
     }
     
-  }  
-  
-
     /*Hide at 768px*/
-    @include respond-to(md) {
+    @media (min-width: 768px) {
         display: none;
     }
-  
+  }   
   
