--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -46,7 +46,7 @@
          .project__card--1 {
             width: 100%;
             height: 250px;
-            @include project-card-xs('/assets/img/placeholder-typing.png');
+            @include project-card-xs('/assets/img/netmatters-homepage-screenshot.png', 'center', 'top');
          }   
          .project__card--2 {
             width: 100%;
@@ -117,10 +117,12 @@
   }
 
    /*Hide Small Devices Container at 768px*/  
-   @include respond-to(md) {
-      display: none;
+   @media (min-width: 768px) {
+      .project__container--xs {
+         display: none;
+      }
    }
-
+  
 
 /*----------------------------------------------------------------------*/
 /*----------------------------------------------------------------------*/
@@ -175,7 +177,7 @@
 
             /*Medium Devices Project Grid Cards*/
             .project__card--1 {             
-               @include project-card('/assets/img/placeholder-typing.png');
+               @include project-card('/assets/img/netmatters-homepage-screenshot.png', 'center', 'top');
                }
          
             .project__card--2 {             
