--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -46,7 +46,7 @@
          .project__card--1 {
             width: 100%;
             height: 250px;
-            @include project-card-xs('assets/img/netmatters-homepage-screenshot.png', 'center', 'top');
+            @include project-card-xs('../assets/img/netmatters-homepage-screenshot.png', 'center', 'top');
          }   
          .project__card--2 {
             width: 100%;
