--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -16,7 +16,7 @@
         width: 100%;
         height: -webkit-fill-available;
         min-height: 100%;
-        background-image: url('/assets/img/mulberry-paper.jpg');
+        background-image: url('../assets/img/mulberry-paper.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position-x: center;
@@ -167,7 +167,7 @@
                 width: 100%;
                 height: -webkit-fill-available;
                 min-height: 100%;
-                background-image: url('/assets/img/mulberry-paper.jpg');
+                background-image: url('../assets/img/mulberry-paper.jpg');
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position-x: center;
