reworking styling and colour theme

--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -335,7 +335,7 @@
             /*Medium Devices Contact Form*/
             .contact__form--md { 
                 grid-area: contact__form--md;
-                background-color: $background-color;
+                background-color: $background-color-comp-light;
                 box-shadow: $box-shadow;
                 border-radius: 8px;
                 margin-top: 20px;
@@ -403,7 +403,7 @@
                         align-self: center;
                         justify-self: center;
                         padding: 12px;
-                        background-color: darken($primary-color, 10%);
+                        background-color: darken($primary-color, 20%);
                         border: none;
                         border-radius: 6px;
                         color: $background-color;
@@ -412,7 +412,7 @@
                         margin-top: 10px;
                             
                             &:hover {
-                                background-color: lighten($primary-color, 1%);
+                                background-color: darken($primary-color, 10%);
                                 color: darken($background-color, 5%);
                             }
                     }
