--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -35,7 +35,7 @@ a {
 
 body {
   margin: 10px;
-  background-color: $background-color;
+  background-color: darken($background-color, 20%);
   
   color: $text-color;
   font-family: $base-font-family;
