--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -25,13 +25,13 @@
 
     .hero__text--h1 {
         position: absolute; 
-        top: 45%; 
+        top: 40%; 
         left: 50%; 
         transform: translate(-50%, -50%); 
         text-align: center; 
         text-wrap: nowrap;
         font-family: $hero-font; 
-        font-size: clamp(1rem, 4vw, 2rem);
+        font-size: clamp(1rem, 5vw, 3rem);
         font-weight: 600;
         letter-spacing: 1px;
         line-height: 0; 
@@ -39,6 +39,7 @@
         overflow: hidden; 
         padding: 2px 2px;
         border-radius: 10px;
+        margin-bottom: 40px;
         
         text-shadow: 1px 1px 0 rgba (52, 53, 53) ;
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
@@ -55,7 +56,7 @@
         text-align: center;
         text-wrap: nowrap;
         font-family: $hero-font;
-        font-size: clamp(1rem, 4vw, 1.7rem);
+        font-size: clamp(0.8rem, 2.5vw, 1.7rem);
         font-weight: 600;
         letter-spacing: .8px;
         color: $text-color;
@@ -190,7 +191,7 @@
 
             .hero__text--h1 {
             font-family: $hero-font;
-            font-size: clamp(1.5rem, 3vw, 2.75rem);
+            font-size: clamp(1.5rem, 5vw, 3.5rem);
             font-weight: 600;
             letter-spacing: 1px;
             line-height: 1.2;    
@@ -213,7 +214,7 @@
             transform: translateX(-50%);
             text-align: center;
             font-family: $hero-font;
-            font-size: clamp(1.5rem, 3.5vw, 2.75rem);
+            font-size: clamp(1.5rem, 2.5vw, 2rem);
             font-weight: 600;
             line-height: 1.2;
             letter-spacing: 1px;
@@ -245,4 +246,12 @@
 
 }
 
-
+footer {
+    padding: 2px; 
+    width: 100vw;
+    bottom: -20px;
+    font-size: 0.7rem;
+    color: $text-color;
+    background-color: $footer-bg-color;
+    z-index: 1000;
+}
