--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -18,6 +18,11 @@
 }
 
 footer {
+    padding: 2px; 
+    width: 100vw;
     bottom: -20px;
     font-size: 0.7rem;
+    color: $text-color;
+    background-color: $footer-bg-color;
+    z-index: 1000;
 }
