--- a/scss/pages/_examples.scss
+++ b/scss/pages/_examples.scss
@@ -33,10 +33,10 @@
         color: $text-color;
 
         span {
-            background-color: lighten($text-color, 60%);
+            background-color: lighten($primary-color-dark, 10%);
             padding: 3px;
             border-radius: 6px;
-            box-shadow: 5px 5px 0 lighten($text-color, 20%);
+            box-shadow: 5px 5px 0 darken($primary-color-dark, 10%);
         }
     }
 
@@ -59,10 +59,10 @@
         
         
         span {
-            background-color: lighten($text-color, 60%);
+            background-color: lighten($primary-color-dark, 15%);
             padding: 3px;
             border-radius: 6px;
-            box-shadow: 5px 5px 0 lighten($text-color, 20%);
+            box-shadow: 5px 5px 0 darkenen($primary-color-dark, 10%);
         }
     }
     
@@ -173,4 +173,15 @@
     color: white;
     cursor: pointer;
     z-index: 1001;
+}
+
+footer {
+    position: relative;
+    padding: 2px; 
+    width: 100vw;
+    bottom: -60px;
+    font-size: 0.7rem;
+    color: $text-color;
+    background-color: $footer-bg-color;
+    z-index: 1000;
 }
