--- a/scss/pages/_scs.scss
+++ b/scss/pages/_scs.scss
@@ -195,3 +195,13 @@
             list-style-type: none;
         }
     }
+
+    footer {
+        padding: 2px; 
+        width: 100vw;
+        bottom: -20px;
+        font-size: 0.7rem;
+        color: $text-color;
+        background-color: $footer-bg-color;
+        z-index: 1000;
+    }
