--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -52,7 +52,7 @@
          .project__card--2 {
             width: 100%;
             height: 250px;
-            @include project-card-xs('../assets/img/placeholder-coffee.png');
+            @include project-card-xs('../assets/img/js-array-screenshot.png', 'center', 'top');
          }
          .project__card--3 {
             width: 100%;
@@ -182,7 +182,7 @@
                }
          
             .project__card--2 {             
-               @include project-card('../assets/img/placeholder-coffee.png');
+               @include project-card('../assets/img/js-array-screenshot.png', 'center', 'top');
                }
             
             .project__card--3 {              
