--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -31,7 +31,7 @@
          font-size: 1.8rem;
          font-weight: 700;
          letter-spacing: 0.1rem;
-         color: $text-color;
+         color: $secondary-text-color;
 
             span {
                background-color: $primary-color;
@@ -163,7 +163,7 @@
             font-size: 1.8rem;
             font-weight: 700;
             letter-spacing: 0.1rem;
-            color: $text-color;
+            color: $secondary-text-color;
          
                span {
                   width: fit-content;
