--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -3,21 +3,21 @@
 /////////////
 
 //Greens
-$primary-color: #919D82; 
+$primary-color: #2A3132; 
 $primary-color-dark: darken(#626e60, 10%); //Verdant Hush
 //Complementary Shades
 $secondary-color: #7d6b57; //Warrior
 
 //Font Colours
-$text-color: #020202; //Black Wash
-$secondary-text-color: #e8ebe5; //Wild Wheat
+$text-color: #000000; //Black Wash
+$secondary-text-color: #FFFDF2; //Wild Wheat
 $grey-text-color: #6b6b6b; //Shadows
 $text-color-alt: #0d0d12; //Ruined Smores
 $footer-text-color: #020202;
 //Background Colours
-$background-color: #D1CDC3; 
+$background-color: #FFFDF2; 
 $ash: #B7B9A8; //Ash
-$footer-bg-color: #919D82;
+$footer-bg-color: #FFFDF2;
 //Background Colour Complementary Shades
 
 //About-Me Cards Background Colours
