--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -41,6 +41,7 @@
         font-size: 1rem;
         font-weight: 500;
         letter-spacing: 0.05rem;
+        color: $secondary-text-color;
         
 
         span {
@@ -63,6 +64,7 @@
         font-size: 0.9rem;
         font-weight: 500;
         letter-spacing: 1px;
+        color: $primary-color;
 
             // span {
                 
@@ -89,6 +91,7 @@
         font-size: 1rem;
         font-weight: 500;
         letter-spacing: 1px;
+        color: $primary-color;
         
             i {
                 font-size: 1.4rem;
@@ -194,7 +197,7 @@
         font-family: $base-font-family;
         font-size: 1.1rem;
         font-weight: 500;
-        color: $text-color;
+        color: $primary-color;
         justify-self: center;
         align-self: center;
 
@@ -278,6 +281,7 @@
                 font-size: 1rem;
                 font-weight: 500;
                 letter-spacing: 0.05rem;
+                color: $secondary-text-color;
                 
 
                 span {
@@ -296,7 +300,7 @@
                 margin-top: 35px;
                 margin-left: 7px;
                 
-
+                color: $primary-color;
                 font-size: 0.9rem;
                 font-weight: 500;
                 letter-spacing: 1px;
@@ -322,6 +326,7 @@
                 justify-self: left;
                 margin-top: 35px;
                 margin-left: 5px;
+                color: $primary-color;
 
                 font-size: 1rem;
                 font-weight: 500;
@@ -335,7 +340,7 @@
             /*Medium Devices Contact Form*/
             .contact__form--md { 
                 grid-area: contact__form--md;
-                background-color: $background-color-comp-light;
+                background-color: $background-color;
                 box-shadow: $box-shadow;
                 border-radius: 8px;
                 margin-top: 20px;
