--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -16,11 +16,11 @@
         width: 100%;
         height: -webkit-fill-available;
         min-height: 100%;
-        background-image: url('../assets/img/mulberry-paper.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-x: center;
-        filter: brightness(1);
+        // background-image: url('../assets/img/mulberry-paper.jpg');
+        // background-repeat: no-repeat;
+        // background-size: cover;
+        // background-position-x: center;
+        // filter: brightness(1);
     }
 
     .hero__text--h1 {
@@ -35,7 +35,7 @@
         font-weight: 600;
         letter-spacing: 1px;
         line-height: 0; 
-        color: $text-color;
+        color: #000;
         overflow: hidden; 
         padding: 2px 2px;
         border-radius: 10px;
@@ -59,7 +59,7 @@
         font-size: clamp(0.8rem, 2.5vw, 1.7rem);
         font-weight: 600;
         letter-spacing: .8px;
-        color: $text-color;
+        color: #000;
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
         2px 2px 0 rgba(0, 0, 0, 0.2); 
         filter: blur(0.3px); 
@@ -69,7 +69,7 @@
       // Cursor Animation
       #typedText {
           overflow: hidden;
-          border-right: 0.1em solid $text-color;
+          border-right: 0.1em solid #000;
           white-space: nowrap;
           margin: 0 auto;
           letter-spacing: 0.05em;
@@ -82,7 +82,7 @@
               border-color: transparent;
           }
           50% {
-              border-color: $text-color;
+              border-color: #000;
           }
       }
 
@@ -98,7 +98,7 @@
         font-family: $base-font-family;
         font-size: 1.1rem;
         font-weight: 600;
-        color: $text-color;
+        color: #000;
         margin-bottom: 20px;
 
         /*Scroll Down Icon Bounce Animation*/
@@ -168,11 +168,11 @@
                 width: 100%;
                 height: -webkit-fill-available;
                 min-height: 100%;
-                background-image: url('../assets/img/mulberry-paper.jpg');
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position-x: center;
-                filter: brightness(0.9);
+                // background-image: url('../assets/img/mulberry-paper.jpg');
+                // background-repeat: no-repeat;
+                // background-size: cover;
+                // background-position-x: center;
+                // filter: brightness(0.9);
             }
            
 
@@ -195,7 +195,7 @@
             font-weight: 600;
             letter-spacing: 1px;
             line-height: 1.2;    
-            color: $text-color;
+            color: #000;
             text-wrap: nowrap;
             text-shadow: 1px 1px 0 rgba (52, 53, 53) ;
             text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
@@ -218,7 +218,7 @@
             font-weight: 600;
             line-height: 1.2;
             letter-spacing: 1px;
-            color: $text-color;
+            color: #000;
             text-wrap: nowrap;
             text-shadow: 1px 1px 0 rgba (52, 53, 53) ;
             text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
@@ -237,7 +237,7 @@
           
           @keyframes blink-caret {
             from, to { border-color: transparent; }
-            50% { border-color: $text-color; }
+            50% { border-color: #000; }
           }
     }
 }
