--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -69,7 +69,7 @@
       line-height: 1.2rem;
       letter-spacing: 0.1px;
       color: $secondary-text-color;
-      background-color: $text-color;
+      background-color: $background-color-comp-dark;
       padding: 5px;
       border-radius: 4px;
       opacity: 0.9;
@@ -113,7 +113,7 @@
       line-height: 1.2rem;
       letter-spacing: 0.1px;
       color: $secondary-text-color;
-      background-color: $text-color;
+      background-color: $background-color-comp-dark;
       padding: 5px;
       border-radius: 4px;
       opacity: 0.9;
@@ -132,14 +132,15 @@
   box-sizing: border-box;
   font-size: 0.8em;
   font-family: $base-font-family;
+  color: $primary-color;
   background-color: transparent;
   transition: all 0.3s ease;
   cursor: text;
-  caret-color: $text-color;
+  caret-color: $primary-color;
   
 
   &::placeholder {
-      color: lighten($text-color, 25%);
+      color: lighten($primary-color, 10%);
       font-family: $base-font-family;
       letter-spacing: 1px;
 }
@@ -151,6 +152,6 @@
 
   &:hover {
     cursor: text;
-    caret-color: $text-color;
+    caret-color: $primary-color;
   }
 }
