--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: "Bogart Medium";
-  src: url(/assets/typography/bogart__medium.TTF)
+  src: url(http://localhost/netmattersportfolio/assets/typography/bogart__medium.TTF)
 }
 
 // --------- //
