--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -3,253 +3,7 @@
 // ------- //
 
 
-/*-------------------------------*/
-/*Small Devices Contact Container*/
-/*-------------------------------*/
-
-
-.contact__container--xs {
-
-    /*Small Devices Contact Grid*/  
-    height: 100%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 30px 30px 30px auto 60px;
-    gap: 0px 0px;
-    margin: 10px;
-    grid-auto-flow: row;
-    grid-template-areas:
-
-        /*Grid Layout*/
-
-        "contact__heading--xs"
-        "contact__phone--xs"
-        "contact__email--xs"
-        "contact__form--xs"
-        "contact__scroll";
-  
-
-    /*Heading*/
-    .contact__heading--xs {
-        grid-area: contact__heading--xs;
-        scroll-snap-align: start;
-        align-self: center;
-        justify-self: left;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-family: $base-font-family;
-        font-size: 1rem;
-        font-weight: 500;
-        letter-spacing: 0.05rem;
-        color: $secondary-text-color;
-        
-
-        span {
-            background-color: $primary-color;
-            padding: 5px;
-            border-radius: 6px;
-            box-shadow: 5px 5px 0 darken($primary-color, 10%);
-         }
-    }
-
-    /*Phone Icon Link*/
-    .contact__phone--xs {
-        grid-area: contact__phone--xs;
-        align-self: center;
-        justify-self: left;
-        margin-top: 35px;
-        margin-left: 7px;
-        
-
-        font-size: 0.9rem;
-        font-weight: 500;
-        letter-spacing: 1px;
-        color: $primary-color;
-
-            // span {
-                
-                
-            //     border-radius: 2px;
-            //     padding: 10px;
-            //     background-color: $primary-color;
-            //     box-shadow: 20px 25px 0 darken($primary-color, 10%);              
-            // }
-        
-            i {
-                font-size: 1.5rem;
-            }
-    }
-
-    /*Email Icon Link*/
-    .contact__email--xs {
-        grid-area: contact__email--xs;
-        align-self: center;
-        justify-self: left;
-        margin-top: 35px;
-        margin-left: 5px;
-
-        font-size: 1rem;
-        font-weight: 500;
-        letter-spacing: 1px;
-        color: $primary-color;
-        
-            i {
-                font-size: 1.4rem;
-            }
-    }
-
-    /*Small Devices Contact Form*/
-    .contact__form--xs { 
-        grid-area: contact__form--xs;
-        background-color: $background-color;
-        box-shadow: $box-shadow;
-        border-radius: 8px;
-        margin-top: 20px;
-        padding: 10px;
-       
-        .form {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 40px 40px 40px 40px 200px 50px;
-            gap: 10px 10px;
-            grid-auto-flow: row;
-            grid-template-areas:
-
-                /*Form Grid Layout*/
-            
-                "form__firstname--xs"
-                "form__lastname--xs"
-                "form__email--xs"
-                "form__subject--xs"
-                "form__message--xs"
-                "form__submit--xs";
-
-            /*First Name Input*/
-            .form__firstname--xs {
-                grid-area: form__firstname--xs;
-
-                @include form-style();
-            }
-
-            /*Last Name Input*/
-            .form__lastname--xs {
-                grid-area: form__lastname--xs;
-
-                @include form-style();
-            }
-
-            /*Email Input*/
-            .form__email--xs {
-                grid-area: form__email--xs;
-
-                @include form-style();
-            }
-
-            /*Subject Input*/
-            .form__subject--xs {
-                grid-area: form__subject--xs;
-
-                @include form-style();
-            }
-
-            /*Message Text Area Input*/
-            .form__message--xs {
-                grid-area: form__message--xs;
-
-                @include form-style();
-                margin-top: 10px;
-            }
-
-            /*Submit Button*/
-            .form__submit--xs {
-                display: grid;
-                grid-area: form__submit--xs;
-                
-                width: 200px;
-                align-self: center;
-                justify-self: center;
-                padding: 12px;
-                background-color: darken($primary-color, 10%);
-                border: none;
-                border-radius: 6px;
-                color: $background-color;
-                font-size: 16px;
-                cursor: pointer;
-                margin-top: 10px;
-                    
-                    &:hover {
-                        background-color: lighten($primary-color, 1%);
-                        color: darken($background-color, 5%);
-                    }
-            }
-
-        }
-    }
-
-    /*Back To Top Icon Link*/
-    .contact__scroll { 
-        grid-area: contact__scroll;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        
-        font-family: $base-font-family;
-        font-size: 1.1rem;
-        font-weight: 500;
-        color: $primary-color;
-        justify-self: center;
-        align-self: center;
-
-        /*Icon Bouncing Animation*/
-        animation: bounce 3s infinite;
-        filter: drop-shadow(1px 5px 5px rgba(0,0,0,0.6));
-            
-            @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-            transform: translateY(0);
-            }
-            40% {
-            transform: translateY(-10px);
-            }
-            60% {
-            transform: translateY(-5px);
-            }
-        }
-
-        /*Hide Icon Link at 768px*/
-        @include respond-to(md) {
-            display: none;
-        }
-    }
-       
-
-    
-   
-
-    /*Hide Small Devices Contact Grid at 768px*/
-    @include respond-to(md){
-        display: none;
-    }
-
-}
-
-
-
-
-/*----------------------------------------------------------------------*/
-/*----------------------------------------------------------------------*/
-  
-/*--------------------------------*/
-/*Medium Devices Contact Container*/
-/*--------------------------------*/
-
-
-
-        .contact__container--md {
-
-            @include respond-to(md) {
-            /*Medium Devices Contact Grid*/  
+        .contact__container {
             display: grid;
             height: auto;
             width: 80%;
@@ -262,16 +16,16 @@
 
                 /*Grid Layout*/
 
-                "contact__heading--md"
-                "contact__phone--md"
-                "contact__email--md"
-                "contact__form--md";
+                "contact__heading"
+                "contact__phone"
+                "contact__email"
+                "contact__form";
             
         
 
             /*Heading*/
-            .contact__header--md {
-                grid-area: contact__heading--md;
+            .contact__header {
+                grid-area: contact__heading;
                 scroll-snap-align: start;
                 align-self: center;
                 justify-self: left;
@@ -293,8 +47,8 @@
             }
 
             /*Phone Icon Link*/
-            .contact__phone--md {
-                grid-area: contact__phone--md;
+            .contact__phone {
+                grid-area: contact__phone;
                 align-self: center;
                 justify-self: left;
                 margin-top: 35px;
@@ -320,8 +74,8 @@
             }
 
             /*Email Icon Link*/
-            .contact__email--md {
-                grid-area: contact__email--md;
+            .contact__email {
+                grid-area: contact__email;
                 align-self: center;
                 justify-self: left;
                 margin-top: 35px;
@@ -338,8 +92,8 @@
             }
 
             /*Medium Devices Contact Form*/
-            .contact__form--md { 
-                grid-area: contact__form--md;
+            .contact__form { 
+                grid-area: contact__form;
                 background-color: $background-color;
                 box-shadow: $box-shadow;
                 border-radius: 8px;
@@ -356,53 +110,53 @@
 
                         /*Form Grid Layout*/
                     
-                        "form__firstname--md"
-                        "form__lastname--md"
-                        "form__email--md"
-                        "form__subject--md"
-                        "form__message--md"
-                        "form__submit--md";
+                        "form__firstname"
+                        "form__lastname"
+                        "form__email"
+                        "form__subject"
+                        "form__message"
+                        "form__submit";
 
                     /*First Name Input*/
-                    .form__firstname--md {
-                        grid-area: form__firstname--md;
+                    .form__firstname {
+                        grid-area: form__firstname;
 
                         @include form-style();
                     }
 
                     /*Last Name Input*/
-                    .form__lastname--md {
-                        grid-area: form__lastname--md;
+                    .form__lastname {
+                        grid-area: form__lastname;
 
                         @include form-style();
                     }
 
                     /*Email Input*/
-                    .form__email--md {
-                        grid-area: form__email--md;
+                    .form__email {
+                        grid-area: form__email;
 
                         @include form-style();
                     }
 
                     /*Subject Input*/
-                    .form__subject--md {
-                        grid-area: form__subject--md;
+                    .form__subject {
+                        grid-area: form__subject;
 
                         @include form-style();
                     }
 
                     /*Message Text Area Input*/
-                    .form__message--md {
-                        grid-area: form__message--md;
+                    .form__message {
+                        grid-area: form__message;
 
                         @include form-style();
                         margin-top: 10px;
                     }
  
                     /*Submit Button*/
-                    .form__submit--md {
+                    .form__submit {
                         display: grid;
-                        grid-area: form__submit--md;
+                        grid-area: form__submit;
                         
                         width: 200px;
                         align-self: center;
@@ -424,34 +178,92 @@
                 }
             }
 
+        
+
+    }
+
+/* Errors */
+.error {
+    color: red;
+    font-size: 0.9em;
+}
+
+ /* Modal styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1; /* On top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black with opacity */
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto; /* Centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Adjust as needed */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+}
+
+.disabled {
+    background-color: #f0f0f0 !important;
+    cursor: not-allowed;
+}
+
+
+        /*Back To Top Icon Link*/
+        .contact__scroll { 
+            grid-area: contact__scroll;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            
+            font-family: $base-font-family;
+            font-size: 1.1rem;
+            font-weight: 500;
+            color: $primary-color;
+            justify-self: center;
+            align-self: center;
+    
+            /*Icon Bouncing Animation*/
+            animation: bounce 3s infinite;
+            filter: drop-shadow(1px 5px 5px rgba(0,0,0,0.6));
+                
+                @keyframes bounce {
+                0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+                }
+                40% {
+                transform: translateY(-10px);
+                }
+                60% {
+                transform: translateY(-5px);
+                }
+            }
+    
+            /*Hide Icon Link at 768px*/
+            @include respond-to(md) {
+                display: none;
+            }
         }
-
-    }
-
- 
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        justify-content: center;
-        align-items: center;
-    }
-    .modal-content {
-        background-color: white;
-        padding: 20px;
-        border-radius: 5px;
-        width: 80%;
-        max-width: 400px;
-        text-align: center;
-    }
-    .close {
-        float: right;
-        font-size: 20px;
-        font-weight: bold;
-        cursor: pointer;
-    }
+           
+    
